fix: changed width of mainPageWrap and add max-width

--- a/src/app/(home)/mainPage.module.scss
+++ b/src/app/(home)/mainPage.module.scss
@@ -3,15 +3,21 @@
 	flex-direction: column;
 	gap: 62px;
 	background: var(--color-pure-light);
-	width: 93%;
+	width: 100%;
+	max-width: 1760px;
 	padding: 56px 0px;
 	margin: 0px auto;
 	
 	@media (width < 1920px) {
 		& {
+			max-width: 1344px;
 			padding: 48px 0px;
 			gap: 140px;
 		}
+	}
+
+	@media (width < 1440px) {
+		max-width: 1190px;
 	}
 
 	@media (width < 1280px) {
